<resources>
    <string name="onboard_increase_activity">Développez votre activité</string>
    <string name="onboard_boost_revenue">Boostez vos revenus</string>
    <string name="onboard_work_better">Travaillez mieux pour gagner plus</string>
    <string name="onboard_description_2">Autoentrepreneur ou PME, gagnez jusqu’à 28€ de l’heure et acceptez les prestations quand vous voulez</string>
    <string name="onboard_description_1"><![CDATA[Recevez partout en France, tous les jours & gratuitement, des offres de prestations de ménage.]]></string>
    <string name="onboard_description_3">Recevez des bonus allant jusqu’à 2% de votre chiffre d’affaires grâce à des prestations de qualité</string>
    <string name="onboarding_btn_continue">Suite</string>
    <string name="onboarding_btn_start">Démarrer</string>
    <string name="pass">Passer</string>
    <string name="welcome">Bienvenue</string>
    <string name="welcome_description">Développez votre activité de ménage en conservant votre indépendance.</string>
    <string name="welcome_button">Connexion ou Inscription</string>
    <string name="login">Connexion | Inscription</string>
    <string name="edit">Éditer</string>
    <string name="mobile_phone_nr">Téléphone portable</string>
    <string name="phone_confirmation_description">Nous vous enverrons un SMS pour confirmer votre numéro. Des frais standards d’envoi de message et d’échange de données peuvent s’appliquer.</string>
    <string name="string_continue">Continuer</string>
    <string name="phone_confirmation_error">Ooups… Ce numéro de téléphone semble incorrect.\nVérifiez attentivement et saisissez un numéro de mobile valide.</string>
    <string name="confirm_your_number">Confirmez votre numéro</string>
    <string name="enter_4_digit_number">Saisissez le code à 4 chiffres que vous avez reçu au %s</string>
    <string name="renew_code">Renvoyer le code</string>
    <string name="ready_to_work">Prêt à travailler avec Kliner ?</string>
    <string name="ready_to_work_description">Vous allez pouvoir rejoindre notre réseau en quelques minutes. Pour commencer, dites-nous quel type de prestataire de ménage êtes-vous.</string>
    <string name="entrepreneur">Autoentrepreneur</string>
    <string name="pme_with_employees">PME (Avec salariés)</string>
    <string name="join_kliner">Rejoindre Kliner</string>
    <string name="tell_us_more">Dites-nous en plus sur vous</string>
    <string name="user_profile_complete_fields">Ajoutez une photo de profil &amp; Renseignez tous les champs ci-dessous</string>
    <string name="first_name">Prénom</string>
    <string name="last_name">Nom</string>
    <string name="birth_date">Date de naissance</string>
    <string name="next">Suivant</string>
    <string name="company_info">Infos sur votre société</string>
    <string name="company_info_description">Ces informations sont nécessaires pour générer les factures en votre nom et vous reverser vos gains</string>
    <string name="company_name">Raison sociale</string>
    <string name="company_address">Adresse</string>
    <string name="company_email">Email professionnel</string>
    <string name="siren">SIREN</string>
    <string name="siren_info_title">C\’est quoi le SIREN ?</string>
    <string name="siren_info_description">Le Siren est un code unique à 9 chiffres qui sert à identifier chaque entreprise.\nRetrouvez votre numéro SIREN sur un extrait Kbis ou en ligne sur le site officiel infogreffe.fr</string>
    <string name="photo_fragment">PHOTO FRAGMENT</string>
    <string name="camera_permissions_required">L\'autorisation de la caméra est requise</string>
    <string name="location_permissions_required">L\'autorisation de localisation est requise. Vous devez accéder aux paramètres pour accorder l\'autorisation.</string>
    <string name="id_card">Pièce d’identité</string>
    <string name="id_card_description">Prenez en photo un de vos justificatifs d’identité en cours de validité et précisez le pays où il a été délivré.</string>
    <string name="country_hint">Pays de délivrance</string>
    <string name="country_region">Pays/Région</string>
    <string name="find_a_country">Rechercher un pays</string>
    <string name="current_location">Position actuelle</string>
    <string name="countries">Pays</string>
    <string name="eu_citizens">Citoyens Union Européenne</string>
    <string name="add_id_card_front">Recto | Carte d’identité</string>
    <string name="add_id_card_back">Verso | Carte d’identité</string>
    <string name="add_passport">Passeport</string>
    <string name="foreigners">Etrangers</string>
    <string name="add_residence_permit">Titre de séjour</string>
    <string name="your_services">Vos services</string>
    <string name="your_services_description">Ces informations sont utiles pour déterminer le type de missions que nous vous proposerons.</string>
    <string name="add_employee_invite">Vous avez été invité(e) par ‘PartnerFirst name’, de ‘Partner company’. Veuillez vérifier et compléter votre profil.</string>
    <string name="add_employee_update_photo">Cette photo va être vue par les clients. Mettez-vous sous votre meilleur jour.</string>
    <string name="add_photo">Ajouter votre photo</string>
    <string name="phone_number">Numéro de téléphone</string>
    <string name="invite_employees_title">Inviter vos employés</string>
    <string name="invite_employees_description">Rattachez à votre compte les employés qui effectueront les missions proposées par Kliner. Ils seront invités à télécharger l’application et devront ajouter une photo pour que leur profil soit actif.</string>
    <string name="add_employee">Ajouter un employé</string>
    <string name="later">Plus tard</string>
    <string name="employee_info_title">Infos sur votre employé</string>
    <string name="employee_info_description">Ces informations sont utiles pour communiquer et sélectionner le type de mission sur lequel l’employé pourra être affecté.</string>
    <string name="employee_address">Saisir l\'adresse de l\'employe</string>
    <string name="employee_assignment">Votre employé pourra accepter des missions pour votrecompte mais ne pourra pas voir les tarifs appliqués. </string>
    <string name="employee_create_account">Créer le compte &amp; Inviter</string>
    <string name="welcome_format">Bienvenue, %1s</string>
    <string name="invitation_format">Vous avez été invité(e) par %1s, de %2s. Veuillez vérifier et compléter votre profil.</string>
    <string name="activity_area">Secteur d’activité</string>
    <string name="activity_area_description_soloprenur">Ajoutez les zones géographiques où vous souhaitez recevoir les missions (villes, départements ou régions).</string>
    <string name="error_add_activity_area_soloprenur">Vous devez ajouter au moins une zone d\'activité.</string>
    <string name="error_edit_activity_area_soloprenur">Vous devez avoir au moins une zone d\'activité.</string>
    <string name="activity_area_description_sme">Indiquez les villes, départements ou régions où vous souhaitez que votre employé effectue les missions. Par défaut son secteur d’activité est un rayon de 3km autour de son domicile.</string>
    <string name="activity_area_hint">Ajouter des zones (Ex: Paris, Lyon)</string>
    <string name="user_verified_description">Vous êtes prêt à rejoindre le réseau N°1 du ménage en France. Il vous reste à signer le contrat de partenariat et à compléter toutes les informations de votre compte avant de pouvoir recevoir des missions.</string>
    <string name="checking_in_progress">Vérification en cours…</string>
    <string name="user_verification_description">Nous contrôlons les informations que vous nous avez fournies. Cette opération prend généralement 48 heures. Vous recevrez un mail quand votre compte sera activé.</string>
    <string name="error_first_name">Le prénom ne peut pas être vide</string>
    <string name="error_last_name">Le nom de famille ne peut pas être vide!</string>
    <string name="error_birth_date">La date de naissance ne peut pas être vide</string>
    <string name="error_profile_photo">Une photo de profil est requise</string>
    <string name="error_company_name">Le nom de la société ne peut pas être vide</string>
    <string name="error_company_address">L\'adresse de l\'entreprise ne peut pas être vide</string>
    <string name="error_company_email">L\'adresse e-mail de l\'entreprise ne peut pas être vide</string>
    <string name="error_email">L\'e-mail ne peut pas être vide</string>
    <string name="error_company_siren">Ce numéro SIREN est inexistant ou déjà utilisé</string>
    <string name="error_company_email_invalid">Adresse e-mail invalide</string>
    <string name="error_no_id_selected">Veuillez sélectionner une carte d\'identité</string>
    <string name="error_upload_both_sides_of_id">Veuillez ajouter les deux côtés de votre carte d\'identité</string>
    <string name="error_country">Le pays ne peut pas être vide</string>
    <string name="error_service_types">Veuillez sélectionner au moins un type de service</string>
    <string name="error_types">Veuillez sélectionner au moins un type</string>
    <string name="error_work_types">Veuillez sélectionner au moins un type de travail</string>
    <string name="error_address">L\'adresse ne peut pas être vide</string>
    <string name="sign_contract">Contrat à signer</string>
    <string name="sign_the_contract">Signer le contrat</string>
    <string name="accept_terms_conditions">Cochez si vous avez lu &amp; approuvé</string>
    <string name="accept_cesu">Acceptez-vous les CESU?</string>
    <string name="photo_not_editable">Vous ne pouvez pas modifier cette photo pour le moment</string>
    <string name="dashboard">Tableau de bord</string>
    <string name="dashboard_tab">Accueil</string>
    <string name="activity_since">Depuis le début avec Kliner</string>
    <string name="transactions">Transactions</string>
    <string name="revenue">Revenus</string>
    <string name="email">Email</string>
    <string name="rule_1_title">Règle No. 1 #Excellence</string>
    <string name="rule_1_description">Travaillez mieux pour gagner plus. Nous ne gardons que les meilleures aides ménagères dans notre réseau.</string>
    <string name="rule_2_title">Règle No. 2 #Ponctualité</string>
    <string name="rule_2_description">Prenez vos dispositions pour arriver toujours à l’heure chez les clients. Les retards vous coûtent des pénalités.</string>
    <string name="rule_3_title">Règle No. 3 #Tenue</string>
    <string name="rule_3_description">Ne commencez jamais une prestation sans votre tenue de travail.</string>
    <string name="rule_4_title">Règle No. 4 #Politesse</string>
    <string name="rule_4_description">Un beau sourire. Des «Bonjour», «Merci», «Au revoir». Des habitudes qui vous apporteront plus de clients.</string>
    <string name="rule_5_title">Règle No. 5 #Sécurité</string>
    <string name="delete_account_title">Supprimer le compte?</string>
    <string name="delete_account_message">Vous êtes sur le point de supprimer votre profil. Cette action est irréversible. Veuillez confirmer ou annuler votre requête en cliquant sur la croix.</string>
    <string name="delete">Supprimer</string>
    <string name="cancel">Annuler</string>
    <string name="confirm">OK</string>
    <string name="finish_mission">J’ai terminé la mission</string>
    <string name="finish_mission_title">Terminer la mission?</string>
    <string name="finish_mission_description">Vous n’avez validé aucune des instructions de ménage qui vous ont été données. Vous pouvez revenir en arrière et cocher celles que vous avez respectées. Sinon, vous pouvez terminer la mission en cliquant sur ‘Confirmer’.</string>
    <string name="no_internet_connection">Pas de connexion\nInternet</string>
    <string name="no_internet_connection_description">Veuillez vérifier votre connexion et réessayer.</string>
    <string name="try_again">Réessayer</string>
</resources>