<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".EndMissionBinding">

        <variable
            name="viewModel"
            type="com.wolfpackdigital.kliner.partner.core.main.planning.missiondetails.MissionDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_top_corners"
        android:padding="@dimen/margin_28dp">

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_24dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:text="@string/finish_mission_title"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextView.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_28dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:text="@string/finish_mission_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_finish_mission"
            style="@style/Button.Accent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_20dp"
            android:onClick="@{() -> viewModel.finishMission()}"
            android:text="@string/finish_mission"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            style="@style/Button.White.Bordered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:onClick="@{() -> viewModel.onCloseFinishDialog()}"
            android:text="@string/cancel"
            app:cornerRadius="@dimen/btn_corner_radius"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_finish_mission" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>