<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".WorkWithKlinerBinding">

        <variable
            name="viewModel"
            type="com.wolfpackdigital.kliner.partner.core.auth.confirmation.CodeConfirmationViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_round_top_corners"
        android:padding="@dimen/margin_28dp">

        <ImageView
            android:id="@+id/iv_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:text="@string/ready_to_work"
            android:textAlignment="center"
            android:textSize="@dimen/textsize_24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_question" />

        <TextView
            android:id="@+id/tv_description"
            style="@style/TextView.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_28dp"
            android:layout_marginTop="@dimen/margin_40dp"
            android:layout_marginEnd="@dimen/margin_28dp"
            android:text="@string/ready_to_work_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrepreneur"
            style="@style/Button.Accent.Round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/entrepreneur"
            android:onClick="@{() -> viewModel.onEntrepreneur()}"
            app:layout_constraintBottom_toBottomOf="@id/btn_sme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sme"
            style="@style/Button.Black.Round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/pme_with_employees"
            android:onClick="@{() -> viewModel.onSME()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_entrepreneur"
            app:layout_constraintVertical_bias="1" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>