<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class=".NoNetworkBinding">

        <variable
            name="viewModel"
            type="com.wolfpackdigital.kliner.partner.shared.noNetwork.NoNetworkViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context=".shared.noNetwork.NoNetworkDialog">

        <ImageView
            android:id="@+id/no_connection_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_connection"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.25"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/no_connection_title"
            style="@style/TextView.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:gravity="center"
            android:text="@string/no_internet_connection"
            android:textSize="@dimen/textsize_32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_connection_image"
            app:layout_constraintVertical_bias="0.25"
            tools:text="@string/no_internet_connection" />

        <TextView
            android:id="@+id/no_connection_description"
            style="@style/TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_40dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_40dp"
            android:gravity="center"
            android:text="@string/no_internet_connection_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_connection_title"
            tools:text="@string/no_internet_connection_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_entrepreneur"
            style="@style/Button.Accent.Round"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_32dp"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:onClick="@{() -> viewModel.onNetworkRetry()}"
            android:text="@string/try_again"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/no_connection_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>